# JioSaavn

./: MEGA_PACK_README.md  README.md  Testing.py  index.html  pyproject.toml  saavn_downloads.db
JioSaavn/: __init__.py  __init___patch.py  endpoints.py
JioSaavn/Analysis/: Playlist.py  Recommender.py
JioSaavn/Core/: Client.py  Errors.py  Parser.py  Request.py
JioSaavn/Formatter/: Album.py  Artist.py  Playlist.py  Song.py
JioSaavn/Modules/: AdvSearch.py  Album.py  Artist.py  Backup.py  Browse.py  Charts.py  Discovery.py  DownloadPro.py  Lyrics.py  Playlist.py  Radio.py  Resolve.py  Search.py  SmartQueue.py  Social.py  Song.py  Suggestions.py  Sync.py  Trending.py  Webhooks.py
JioSaavn/Servers/: GraphQL.py  MCP.py  WebSocket.py
JioSaavn/Utils/: Cache.py  Crossfade.py  Crypto.py  RateLimit.py  Text.py
