[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "SaavnAPI"
version = "2026.6.21"
description = "Fast async JioSaavn API wrapper for Python"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Abhi Singh" }]
keywords = ["jiosaavn", "music", "api", "async", "python", "songs", "lyrics", "streaming", "artist", "trending"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Topic :: Multimedia :: Sound/Audio",
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9,<4",
    "pyDes>=2.0.1,<3",
]

[project.urls]
Homepage    = "https://pypi.org/project/SaavnAPI/"
Repository  = "https://github.com/Sinchu-xD/JioSaavn"
"Bug Tracker" = "https://github.com/Sinchu-xD/JioSaavn/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["JioSaavn*"]

[tool.setuptools.package-data]
"JioSaavn" = ["py.typed"]
