[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SaavnAPI"
version = "2026.7.11"
description = "Fast async JioSaavn API wrapper with downloads, AI analysis, sync, and dev servers (MCP/GraphQL/WebSocket)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Abhi Singh" }]
keywords = [
    "jiosaavn", "saavn", "music", "api", "async", "python",
    "songs", "lyrics", "streaming", "artist", "trending",
    "download", "mp3", "id3", "playlist", "spotify", "youtube",
    "mcp", "graphql", "websocket", "recommender"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Topic :: Multimedia :: Sound/Audio",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9,<4",
    "pyDes>=2.0.1,<3",
]

[project.optional-dependencies]
download = ["mutagen>=1.47"]
servers  = ["strawberry-graphql>=0.220", "websockets>=12.0"]
sync     = ["rapidfuzz>=3.6"]
all      = [
    "mutagen>=1.47",
    "strawberry-graphql>=0.220",
    "websockets>=12.0",
    "rapidfuzz>=3.6",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage      = "https://pypi.org/project/SaavnAPI/"
Documentation = "https://saavn-api.netlify.app"
Repository    = "https://github.com/Sinchu-xD/JioSaavn"
"Bug Tracker" = "https://github.com/Sinchu-xD/JioSaavn/issues"
Changelog     = "https://github.com/Sinchu-xD/JioSaavn/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["JioSaavn*"]

[tool.setuptools.package-data]
"JioSaavn" = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
